--- a/fundamentos-web/contato.html
+++ b/fundamentos-web/contato.html
@@ -15,12 +15,12 @@
 
     <form>
         <label for="nome">Nome:</label><br>
-        <input type="text" id="nome">
-        <br>
+        <input type="text" id="nome" onkeyup="validaNome()">
+        <div id="txtNome"></div>
         <br>
         <label for="email">E-mail:</label><br>
-        <input type="email" id="email">
-        <br>
+        <input type="email" id="email" onkeyup="validaEmail()">
+        <div id="txtEmail"></div>
         <br>
         <label for="assunto">Assunto:</label><br>
         <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
@@ -33,6 +33,10 @@
     <p>Estadio do Morumbi</p>
     <p>São Paulo-SP</p>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.0927099777223!2d-46.7200394!3d-23.601007799999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce56c31b1fe649%3A0x7d134f4dfc6618c2!2sEst%C3%A1dio%20C%C3%ADcero%20Pompeu%20de%20Toledo%20(MorumBIS)!5e0!3m2!1spt-BR!2sbr!4v1707144541683!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.0927099777223!2d-46.7200394!3d-23.601007799999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce56c31b1fe649%3A0x7d134f4dfc6618c2!2sEst%C3%A1dio%20C%C3%ADcero%20Pompeu%20de%20Toledo%20(MorumBIS)!5e0!3m2!1spt-BR!2sbr!4v1707144541683!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+
+    <script src="assets/js/script.js" ></script>
+
 </body>
 </html>
