--- a/fundamentos-web/index.html
+++ b/fundamentos-web/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -25,13 +26,11 @@
         magnam aliquam omnis! Corrupti hic voluptate in. Nisi aut odit repudiandae laboriosam voluptate?
     </p>
 
-    <img src="assets/img/mclovin.jpg" alt="Literalmente eu">
+    <img class = "mclovin" src="assets/img/mclovin.jpg" alt="Literalmente eu">  
 
-    <h2>Melhor show da história do Rock in Rio!</h2>
+    <h2>video aleatorio do youtube</h2>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/w_CkCW7CBjo?si=j8HTGACxYGj-Xn3R" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7caT5jhPcLc?si=D2z5ejSpSPuEuvsj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
 
